apps/lldap/service-default-lldap.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lldap
    environment: prod
  name: lldap
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: ldap
    port: 3890
    protocol: TCP
    targetPort: 3890
  - name: http
    port: 17170
    protocol: TCP
    targetPort: 17170
  selector:
    app: lldap
  sessionAffinity: None
  type: ClusterIP
