apps/lldap/ingress-default-lldap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: lldap
    environment: prod
  name: lldap
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: ldap.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: lldap
            port:
              number: 17170
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ldap.brmartin.co.uk
    secretName: wildcard-brmartin-tls
